# serializer version: 1
# name: test_nativeapp_deploy[v1]
  '''
  Creating new application package myapp_pkg_@@USER@@ in account.
  Checking if stage myapp_pkg_@@USER@@.app_src.stage exists, or creating a new one if none exists.
  Performing a diff between the Snowflake stage and your local deploy_root ('@@DEPLOY_ROOT@@') directory.
  Local changes to be deployed:
    added:    app/README.md -> README.md
    added:    app/manifest.yml -> manifest.yml
    added:    app/setup_script.sql -> setup_script.sql
  Updating the Snowflake stage from your local @@DEPLOY_ROOT@@ directory.
  Validating Snowflake Native App setup script.
  Deployed successfully. Application package and stage are up-to-date.
  
  '''
# ---
# name: test_nativeapp_deploy[v2]
  '''
  Creating new application package myapp_pkg_@@USER@@ in account.
  Checking if stage myapp_pkg_@@USER@@.app_src.stage exists, or creating a new one if none exists.
  Performing a diff between the Snowflake stage and your local deploy_root ('@@DEPLOY_ROOT@@') directory.
  Local changes to be deployed:
    added:    app/README.md -> README.md
    added:    app/manifest.yml -> manifest.yml
    added:    app/setup_script.sql -> setup_script.sql
  Updating the Snowflake stage from your local @@DEPLOY_ROOT@@ directory.
  Validating Snowflake Native App setup script.
  Deployed successfully. Application package and stage are up-to-date.
  
  '''
# ---
# name: test_nativeapp_deploy_dot[v1]
  '''
  Creating new application package myapp_pkg_@@USER@@ in account.
  Checking if stage myapp_pkg_@@USER@@.app_src.stage exists, or creating a new one if none exists.
  Performing a diff between the Snowflake stage and your local deploy_root ('@@DEPLOY_ROOT@@') directory.
  Local changes to be deployed:
    added:    app/README.md -> README.md
    added:    app/manifest.yml -> manifest.yml
    added:    app/setup_script.sql -> setup_script.sql
  Updating the Snowflake stage from your local @@DEPLOY_ROOT@@ directory.
  Validating Snowflake Native App setup script.
  Deployed successfully. Application package and stage are up-to-date.
  
  '''
# ---
# name: test_nativeapp_deploy_dot[v2]
  '''
  Creating new application package myapp_pkg_@@USER@@ in account.
  Checking if stage myapp_pkg_@@USER@@.app_src.stage exists, or creating a new one if none exists.
  Performing a diff between the Snowflake stage and your local deploy_root ('@@DEPLOY_ROOT@@') directory.
  Local changes to be deployed:
    added:    app/README.md -> README.md
    added:    app/manifest.yml -> manifest.yml
    added:    app/setup_script.sql -> setup_script.sql
  Updating the Snowflake stage from your local @@DEPLOY_ROOT@@ directory.
  Validating Snowflake Native App setup script.
  Deployed successfully. Application package and stage are up-to-date.
  
  '''
# ---
# name: test_nativeapp_deploy_files[v1]
  '''
  Creating new application package myapp_pkg_@@USER@@ in account.
  Checking if stage myapp_pkg_@@USER@@.app_src.stage exists, or creating a new one if none exists.
  Performing a diff between the Snowflake stage and your local deploy_root ('@@DEPLOY_ROOT@@') directory.
  Local changes to be deployed:
    added:    app/manifest.yml -> manifest.yml
    added:    app/setup_script.sql -> setup_script.sql
  Updating the Snowflake stage from your local @@DEPLOY_ROOT@@ directory.
  Deployed successfully. Application package and stage are up-to-date.
  
  '''
# ---
# name: test_nativeapp_deploy_files[v2]
  '''
  Creating new application package myapp_pkg_@@USER@@ in account.
  Checking if stage myapp_pkg_@@USER@@.app_src.stage exists, or creating a new one if none exists.
  Performing a diff between the Snowflake stage and your local deploy_root ('@@DEPLOY_ROOT@@') directory.
  Local changes to be deployed:
    added:    app/manifest.yml -> manifest.yml
    added:    app/setup_script.sql -> setup_script.sql
  Updating the Snowflake stage from your local @@DEPLOY_ROOT@@ directory.
  Deployed successfully. Application package and stage are up-to-date.
  
  '''
# ---
# name: test_nativeapp_deploy_looks_for_prefix_matches[v1]
  '''
  Creating new application package myapp_pkg_@@USER@@ in account.
  Checking if stage myapp_pkg_@@USER@@.app_src.stage exists, or creating a new one if none exists.
  Performing a diff between the Snowflake stage and your local deploy_root ('@@DEPLOY_ROOT@@') directory.
  Local changes to be deployed:
    added:    app/README.md -> README.md
    added:    app/manifest.yml -> manifest.yml
    added:    app/setup_script.sql -> setup_script.sql
  Updating the Snowflake stage from your local @@DEPLOY_ROOT@@ directory.
  Validating Snowflake Native App setup script.
  Deployed successfully. Application package and stage are up-to-date.
  
  '''
# ---
# name: test_nativeapp_deploy_looks_for_prefix_matches[v2]
  '''
  Creating new application package myapp_pkg_@@USER@@ in account.
  Checking if stage myapp_pkg_@@USER@@.app_src.stage exists, or creating a new one if none exists.
  Performing a diff between the Snowflake stage and your local deploy_root ('@@DEPLOY_ROOT@@') directory.
  Local changes to be deployed:
    added:    app/README.md -> README.md
    added:    app/manifest.yml -> manifest.yml
    added:    app/setup_script.sql -> setup_script.sql
  Updating the Snowflake stage from your local @@DEPLOY_ROOT@@ directory.
  Validating Snowflake Native App setup script.
  Deployed successfully. Application package and stage are up-to-date.
  
  '''
# ---
# name: test_nativeapp_deploy_nested_directories[v1]
  '''
  Creating new application package myapp_pkg_@@USER@@ in account.
  Checking if stage myapp_pkg_@@USER@@.app_src.stage exists, or creating a new one if none exists.
  Performing a diff between the Snowflake stage and your local deploy_root ('@@DEPLOY_ROOT@@') directory.
  Local changes to be deployed:
    added:    app/nested/dir/file.txt -> nested/dir/file.txt
  Updating the Snowflake stage from your local @@DEPLOY_ROOT@@ directory.
  Deployed successfully. Application package and stage are up-to-date.
  
  '''
# ---
# name: test_nativeapp_deploy_nested_directories[v2]
  '''
  Creating new application package myapp_pkg_@@USER@@ in account.
  Checking if stage myapp_pkg_@@USER@@.app_src.stage exists, or creating a new one if none exists.
  Performing a diff between the Snowflake stage and your local deploy_root ('@@DEPLOY_ROOT@@') directory.
  Local changes to be deployed:
    added:    app/nested/dir/file.txt -> nested/dir/file.txt
  Updating the Snowflake stage from your local @@DEPLOY_ROOT@@ directory.
  Deployed successfully. Application package and stage are up-to-date.
  
  '''
# ---
# name: test_nativeapp_deploy_prune[v1-app deploy --no-prune-contains2-not_contains2]
  '''
  Checking if stage myapp_pkg_@@USER@@.app_src.stage exists, or creating a new one if none exists.
  Performing a diff between the Snowflake stage and your local deploy_root ('@@DEPLOY_ROOT@@') directory.
  The following files exist only on the stage:
  README.md
  
  Use the --prune flag to delete them from the stage.
  Your stage is up-to-date with your local deploy root.
  Validating Snowflake Native App setup script.
  Deployed successfully. Application package and stage are up-to-date.
  
  '''
# ---
# name: test_nativeapp_deploy_prune[v1-app deploy --no-validate-contains1-not_contains1]
  '''
  Checking if stage myapp_pkg_@@USER@@.app_src.stage exists, or creating a new one if none exists.
  Performing a diff between the Snowflake stage and your local deploy_root ('@@DEPLOY_ROOT@@') directory.
  Deleted paths to be removed from your stage:
    deleted:  README.md
  Updating the Snowflake stage from your local @@DEPLOY_ROOT@@ directory.
  Deployed successfully. Application package and stage are up-to-date.
  
  '''
# ---
# name: test_nativeapp_deploy_prune[v1-app deploy --prune --no-validate-contains0-not_contains0]
  '''
  Checking if stage myapp_pkg_@@USER@@.app_src.stage exists, or creating a new one if none exists.
  Performing a diff between the Snowflake stage and your local deploy_root ('@@DEPLOY_ROOT@@') directory.
  Deleted paths to be removed from your stage:
    deleted:  README.md
  Updating the Snowflake stage from your local @@DEPLOY_ROOT@@ directory.
  Deployed successfully. Application package and stage are up-to-date.
  
  '''
# ---
# name: test_nativeapp_deploy_prune[v2-app deploy --no-prune-contains2-not_contains2]
  '''
  Checking if stage myapp_pkg_@@USER@@.app_src.stage exists, or creating a new one if none exists.
  Performing a diff between the Snowflake stage and your local deploy_root ('@@DEPLOY_ROOT@@') directory.
  The following files exist only on the stage:
  README.md
  
  Use the --prune flag to delete them from the stage.
  Your stage is up-to-date with your local deploy root.
  Validating Snowflake Native App setup script.
  Deployed successfully. Application package and stage are up-to-date.
  
  '''
# ---
# name: test_nativeapp_deploy_prune[v2-app deploy --no-validate-contains1-not_contains1]
  '''
  Checking if stage myapp_pkg_@@USER@@.app_src.stage exists, or creating a new one if none exists.
  Performing a diff between the Snowflake stage and your local deploy_root ('@@DEPLOY_ROOT@@') directory.
  Deleted paths to be removed from your stage:
    deleted:  README.md
  Updating the Snowflake stage from your local @@DEPLOY_ROOT@@ directory.
  Deployed successfully. Application package and stage are up-to-date.
  
  '''
# ---
# name: test_nativeapp_deploy_prune[v2-app deploy --prune --no-validate-contains0-not_contains0]
  '''
  Checking if stage myapp_pkg_@@USER@@.app_src.stage exists, or creating a new one if none exists.
  Performing a diff between the Snowflake stage and your local deploy_root ('@@DEPLOY_ROOT@@') directory.
  Deleted paths to be removed from your stage:
    deleted:  README.md
  Updating the Snowflake stage from your local @@DEPLOY_ROOT@@ directory.
  Deployed successfully. Application package and stage are up-to-date.
  
  '''
# ---
